cmake_minimum_required(VERSION 3.21 FATAL_ERROR)
find_package(SGEXTN)
BuildLah_use_default_settings()
project(_ocu_entation VERSION 1.0.0 LANGUAGES CXX)
BuildLah_find_dependencies()
BuildLah_add_component(documentation_app GUI "." "" "" "_ocu_entation" SGEXTN::SG_Containers  SGEXTN::SG_Core SGEXTN::SG_FileSystem SGEXTN::SG_Widgets SGEXTN::EntryPoint_SG)
